2015-10-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
    * scripts/GenerateTreeDescriptionFromJSON.py now stores fID as string and writes appropriate header 

2015-09-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Sharing of functionality between setup.sh and setup_afs.sh
	* Setup.sh now contains a 'VERSION' that gets exported to
	'HISTFITTER-VERSION'. Use this in case of a tag (e.g. "00-00-51")
	* svn:ignore on *.pyc in scripts

2015-09-18 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Make sure that setup_afs actually picks up python
	* Better debugging in prepareHistos()

2015-09-10 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
        * adding possibility to display impact of systematics before fit - code proposals by Luigi
        M       scripts/HistFitter.py
        M       src/Utils.cxx
        M       src/Utils.h

2015-09-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Patch to TMsgLogger.cxx to work on OS X
	* Patch to Makefile.arch to detect ROOT versions
	* Patch to Makefile to use rootcint or rootcling, depending on the version
	* Improvements to several files to make explicit what cout/endl/ostream are used to prevent compilation errors
	* Fix a double->int conversion warning in ValidationUtils.cxx
	* NOTE: ROOT5 compatibility is not guaranteed. This version still works, future versions might break.

2015-07-02 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M       macros/Examples/contourplot/contourmacros/CombinationGlob.C
        M       macros/Examples/contourplot/contourmacros/SUSY_m0_vs_m12_all_withBand_cls.C
        M       macros/Examples/contourplot/contourmacros/m0_vs_m12_nofloat.C
        M       macros/Examples/contourplot/makecontourplots.C
        M       macros/Examples/contourplot/makelistfiles.C
        M       macros/Examples/p-values/pvalue.C
        M       python/prepareHistos.py
        M       setup.sh
        M       setup_afs.sh
        M       src/LinkDef.h
        M       src/Makefile